# dyn_compatible

./: CHANGELOG.md  Cargo.toml  README.md
macros/: Cargo.toml  README.md
macros/src/: dyn_compatible_impl.rs  lib.rs  translate.rs
src/: lib.rs  not_dyn.rs  prelude.rs
tests/: compile_check.rs
tests_compile_fail/: mod.rs
