[workspace]
members = ["macros"]

[workspace.package]
authors = ["Nossie531"]
edition = "2024"
repository = "https://github.com/nossie531/dyn_compatible"
license = "MIT OR Apache-2.0"

[package]
name = "dyn_compatible"
version = "0.1.2"
description = "Dyn compatible marker"
keywords = ["dyn-compatible", "object-safe"]
categories = ["no-std", "rust-patterns"]
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dyn_compatible_macro = { version = "=0.1.1", path = "macros" }
