[package]
name = "dyn_compatible_macro"
version = "0.1.1"
description = "Macros for `dyn_compatible`."
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
